--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
+    "cors": "^2.8.5",
     "date-fns": "^2.0.0-beta.5",
     "eslint-plugin-react-hooks": "^4.2.1-alpha-a44a7a2a3-20211111",
     "moment": "^2.29.1",
