--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express-unless": "^1.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.0.12",
-    "nodeman": "^1.1.2"
+    "nodeman": "^1.1.2",
+    "vercel": "^37.12.1"
   }
 }
